--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<!-- agregar menu -->
 	<ul class="menu">
 	<li><a href="#">Boletos</a></li>
-	<li><a href="#">La Unión</a></li>
-	<li><a href="#">P.Claves y Bibliografía</a></li>
+	<li><a href="https://marce27.github.io/Region_Union/">La Unión</a></li>
+	<li><a href="https://marce27.github.io/Boletos_PC_B/">P.Claves y Bibliografía</a></li>
 	</ul>
 	
     <!-- Comentario -->
