--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<li><a href="https://marce27.github.io/boletos/">Boletos</a></li>
 	<li><a href="https://marce27.github.io/Region_Union/">La Unión</a></li>
 	<li><a href="https://marce27.github.io/Boletos_PC_B/">P.Claves y Bibliografía</a></li>
+	<li><a href="https://marce27.github.io/fotosB/">Fotos</a></li>
 	</ul>
 	
     <!-- Comentario -->
